--- a/public/views/admin.ejs
+++ b/public/views/admin.ejs
@@ -20,6 +20,16 @@
             background-color: #222; /* 메뉴바 배경색 */
             position: relative; /* 드롭다운 위치 설정 */
         }
+        form {
+            display: inline-block; /* 가로로 나열되도록 설정 */
+        }
+
+        .edt-btn, .del-btn {
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
         .dropdown-content {
             display: none;
             flex-direction: column; /* 세로 방향으로 정렬 */
@@ -79,6 +89,16 @@
             margin-bottom: 20px;
             color: #ddd;
         }
+        .pro-btn {
+            width: 300px;
+        }
+        .edt-btn {
+            width: 100px;
+        }
+        .del-btn {
+            width: 194px;
+        }
+
     </style>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -125,38 +145,36 @@
                     <h3><%= category %></h3>
                     <div class="container">
                         <% categoryPosts.forEach(post => { %>
-                            <% 
-                                const flagArray = posts.currentUser.userInfo.flag && posts.currentUser.userInfo.flag.pro_idx 
-                                                ? Array.isArray(posts.currentUser.userInfo.flag.pro_idx) 
-                                                    ? posts.currentUser.userInfo.flag.pro_idx 
-                                                    : [posts.currentUser.userInfo.flag.pro_idx]
-                                                : [];
-                                const isInFlag = flagArray.includes(String(post.pro_idx)); 
-                                const buttonClass = isInFlag ? 'green-button' : ''; 
-                            %>
-                        
-                            <button class="<%= buttonClass %>" onclick="location.href='/wargame/problem?page=<%= post.pro_idx %>'">
+
+                            
+                            <button class="pro-btn" onclick="location.href='/wargame/problem?page=<%= post.pro_idx %>'">
                                 <% if (post.title.length > 15) { %>
                                     <% let title = "" %>
-        
-                                    <% for (let i = 0; i < 11; i++) {%>
+                                    <% for (let i = 0; i < 25; i++) {%>
                                         <% title += post.title[i] %>
                                     <% } %>
                                     <% title += "..." %>
-                                    <%= title %>
+                                    <h3><%= title %></h3>
+                                    
         
                                 <% } else { %>
-                                    <%= post.title %>
+                                    <h3><%= post.title %></h3>
                                 <% } %>
+
+                              
                                 
                                 <br><br>
                                 
                                 <%= post.score %> 
                                 
-                            </button>
-                            
-                            <button>Edit</button>
-                            <button>Delete</button>
+                            </button><br>
+
+                            <button class="edt-btn" name="proEdit" onclick="location.href='/admin/problem/edit/<%= post.pro_idx %>'">Edit</button>
+                            <button class="del-btn" name="proDelete" onclick="location.href='/admin/problem/delete/<%= post.pro_idx %>'">Delete</button><br>
+
+                            title/idx : <%= post.title %>.<%= post.pro_idx %><br>
+                            flag : <%= post.flag %><br>
+                            writer_idx : <%= post.usr_idx %><br><br>
                         <% }) %>
                     </div>
                 <% } %>
