--- a/public/views/forgot.ejs
+++ b/public/views/forgot.ejs
@@ -154,17 +154,13 @@
 
     <div class="form-container">
         <div class="form-background">
-            <h1>Login</h1>
+            <h1>Forgot Password</h1>
             <form method="post">
                 <input type="text" name="id" placeholder="Enter your ID" required><br>
-                <input type="password" name="pw" placeholder="Enter your password" required><br>
-                <button type="submit">Login</button>
+                <input type="email" name="email" placeholder="Enter your Email" required><br>
+                <button type="submit">Send Email</button>
             </form>
             <br>
-            <div style="text-align: center;">
-                <a href="/forgot">Forgot your password? Reset it here.</a>
-            </div>
-            
         </div>
     </div>
 
