--- a/public/views/problem.ejs
+++ b/public/views/problem.ejs
@@ -582,7 +582,7 @@
 
                                 <!-- Delete button -->
                                 <% if (posts.currentUsrClass==1 || posts.currentUsrId==commentContent[i].usr_id) { %>
-                                    <button type="button" id="deleteCommentBtn" class="comment-action-btn" onclick="toggleDeleteForm('<%= commentContent[i].com_idx %>')">Delete</button>
+                                    <button type="button" id="deleteCommentBtn" class="comment-action-btn" onclick="if(confirm('Are you sure you want to delete this?')){toggleDeleteForm('<%= commentContent[i].com_idx %>')}">Delete</button>
                                 <% } %>
                                
                             </li>
