FEAT user rank, mod password

--- a/public/views/forgot.ejs
+++ b/public/views/forgot.ejs
@@ -154,7 +154,7 @@
 
     <div class="form-container">
         <div class="form-background">
-            <h1>Forgot Password</h1>
+            <h1>Password Issuance</h1>
             <form method="post">
                 <input type="text" name="id" placeholder="Enter your ID" required><br>
                 <input type="email" name="email" placeholder="Enter your Email" required><br>
