--- a/public/views/admin.ejs
+++ b/public/views/admin.ejs
@@ -210,5 +210,16 @@
                 <br><br>
             <% } %>
         </div>
+
+        <div class="content">
+            <h1>Flag</h1>
+            <% for (let i = 0; i < 3; i++) { %>
+                (<%= posts.flagLog[i].usr_id %> |
+                <%= posts.flagLog[i].pro_title %> |
+                <%= posts.flagLog[i].status %> |
+                <%= new Date(posts.flagLog[i].flg_time).toLocaleString('ko-KR', { timeZone: 'Asia/Seoul' }) %>)<br>
+                <br>
+            <% } %>
+        </div>
     </body>
 </html>
